--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,10 @@
-CHANGES.txt
+0.8.3
+==============
+- bugfix: attrForSelected was not working
+- iron-pages compatibility: added selectedItem
+- feature: rescueSelection: selection to use if last one was bad
 
 0.8.2
+==============
 - fix for http://stackoverflow.com/questions/32639639/ios-9-mobile-safari-has-a-blinking-bug-with-transform-scale3d-and-translate3d
   ios animation janky
