--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+0.8.5
+==============
+- Removed on-demand element definition loading <link> inside template. It did not work in IE.
+
 0.8.4
 ==============
 - added `lazy-pages-transition-ready` event if you need to interact with page before it is shown
